Updated TOC to align with crumbs. Fixed anchor-links not showing on hover. Updated the search input size to match the TOC.

--- a/src/static/css/lunr-search.css
+++ b/src/static/css/lunr-search.css
@@ -45,3 +45,14 @@ p.lunr-search-result-summary {
 	max-height: 48px;
 	text-overflow: ellipsis;
 }
+
+@media (min-width: 992px) {
+	.navbar-form {
+		width: 228px;/* 3 col */
+	}
+}
+@media (min-width: 1200px) {
+	.navbar-form {
+		width: 278px;/* 3 col*/
+	}
+}
